k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: main-ingress

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  rules:
    # for local - host:micro.local
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: gateway-service
                port:
                  number: 3000
